# swagger_server/controllers/banner_controller.py
@@ -1,6 +1,9 @@
+import datetime
+
 import connexion
 import six
 from sqlalchemy import and_
+from sqlalchemy.sql.operators import in_op
 
 from swagger_server.models.banner import Banner  # noqa: E501
 from swagger_server.config import db, settings
@@ -66,18 +69,20 @@ def get_banner_info(app_code):  # noqa: E501
 
     :rtype: str
     """
-    return 'do some magic!'
+    banner = Banner.query.filter(
+        and_(Banner.app_code == app_code)) \
+        .order_by(Banner.date_start) \
+        .first_or_404()
+    return banner
 
 
-def get_banner_list(date_start=None, is_active=None, date_finish=None, app_codes=None):  # noqa: E501
+def get_banner_list(date_start=None, date_finish=None, app_codes=None):  # noqa: E501
     """Получить список активных баннеров
 
      # noqa: E501
 
     :param date_start: Дата начала работ
     :type date_start: str
-    :param is_active: Актуальный баннер
-    :type is_active: bool
     :param date_finish: Дата окончания работ
     :type date_finish: str
     :param app_codes: Системы на которые вешается баннер
@@ -85,6 +90,13 @@ def get_banner_list(date_start=None, is_active=None, date_finish=None, app_codes
 
     :rtype: List[Banner]
     """
-    date_start = util.deserialize_datetime(date_start)
-    date_finish = util.deserialize_datetime(date_finish)
-    return 'do some magic!'
+    date_start = util.deserialize_datetime(date_start) if date_start else datetime.datetime.min
+    date_finish = util.deserialize_datetime(date_finish) if date_finish else datetime.datetime.max
+
+    filtered = and_(Banner.date_start >= date_start, Banner.date_finish <= date_finish)
+    if app_codes:
+        filtered = and_(in_op(Banner.app_code, app_codes), filtered)
+
+    return Banner.query.filter(filtered) \
+        .order_by(Banner.date_start) \
+        .all()
